# demo-make-model-validation-sexy-again

./: .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml
demo_model_validation/: combine_pandera_pydantic.py  dataframe_validation.py  turbine_model.py
